@@ -1,9 +1,6 @@
 package com.zrlog.admin.business.service;
 
-import com.hibegin.common.util.BeanUtil;
-import com.hibegin.common.util.IOUtil;
-import com.hibegin.common.util.LoggerUtil;
-import com.hibegin.common.util.StringUtils;
+import com.hibegin.common.util.*;
 import com.hibegin.common.util.http.HttpUtil;
 import com.hibegin.common.util.http.handle.HttpFileHandle;
 import com.hibegin.http.server.api.HttpRequest;
@@ -39,6 +36,7 @@ import java.util.*;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 public class AdminArticleService {
 
@@ -81,7 +79,7 @@ public class AdminArticleService {
             thumbnailFile.getParentFile().mkdirs();
             IOUtil.writeBytesToFile(bytes, thumbnailFile);
             return new UploadService().getCloudUrl("", path, thumbnailFile.getPath(), null,
-                    adminTokenVO).url() + "?h=" + height + "&w=" + width;
+                    adminTokenVO).getUrl() + "?h=" + height + "&w=" + width;
         } catch (Exception e) {
             LOGGER.log(Level.SEVERE, "", e);
         }
@@ -183,7 +181,7 @@ public class AdminArticleService {
             log.put("thumbnail", createArticleRequest.getThumbnail());
         }
         //fix digest xss
-        String parseInputDigest = Jsoup.clean(Objects.requireNonNullElse(createArticleRequest.getDigest(), ""), Safelist.basicWithImages());
+        String parseInputDigest = Jsoup.clean(ObjectHelpers.requireNonNullElse(createArticleRequest.getDigest(), ""), Safelist.basicWithImages());
         // 自动摘要
         if (StringUtils.isEmpty(parseInputDigest) && Objects.equals(createArticleRequest.isRubbish(), false)) {
             int autoSize = Constants.getAutoDigestLength();
@@ -220,6 +218,6 @@ public class AdminArticleService {
         Map<String, Long> adminArticleData = new Log().getAdminArticleData();
         return adminArticleData.entrySet().stream().map(e -> {
             return new ArticleActivityData(e.getKey(), e.getValue());
-        }).toList();
+        }).collect(Collectors.toList());
     }
 }
