@@ -3,6 +3,7 @@ package com.zrlog.business.service;
 import com.hibegin.common.util.LoggerUtil;
 import com.hibegin.http.server.util.PathUtil;
 import com.zrlog.common.Updater;
+import com.zrlog.common.UpdaterTypeEnum;
 import com.zrlog.common.vo.Version;
 import com.zrlog.util.ZrLogUtil;
 
@@ -11,15 +12,31 @@ import java.lang.management.ManagementFactory;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
 import java.util.logging.Logger;
 
-public record JarUpdater(String[] args, File execFile) implements Updater {
+public class ZipUpdater implements Updater {
 
-    private static final Logger LOGGER = LoggerUtil.getLogger(JarUpdater.class);
+    private static final Logger LOGGER = LoggerUtil.getLogger(ZipUpdater.class);
+    private final String[] args;
+    private final File execFile;
+
+    public ZipUpdater(String[] args, File execFile) {
+        this.args = args;
+        this.execFile = execFile;
+    }
+
+    @Override
+    public File execFile() {
+        return execFile;
+    }
+
+    @Override
+    public UpdaterTypeEnum getType() {
+        return UpdaterTypeEnum.ZIP;
+    }
 
     public void restartProcessAsync(Version upgradeVersion) {
-        Thread.ofVirtual().start(() -> {
+        new Thread(() -> {
             List<String> inputArguments = ManagementFactory.getRuntimeMXBean().getInputArguments();
             // 构造完整的命令
             List<String> cmdArgs = new ArrayList<>();
@@ -27,7 +44,7 @@ public record JarUpdater(String[] args, File execFile) implements Updater {
             cmdArgs.addAll(inputArguments);
             cmdArgs.add("-jar");
             cmdArgs.add(execFile.toString());
-            cmdArgs.addAll(Arrays.stream(args).toList());
+            cmdArgs.addAll(Arrays.asList(args));
             if (cmdArgs.stream().noneMatch(e -> e.startsWith("--port="))) {
                 cmdArgs.add("--port=" + ZrLogUtil.getPort(args));
             }
@@ -39,7 +56,7 @@ public record JarUpdater(String[] args, File execFile) implements Updater {
             } catch (Exception e) {
                 LOGGER.warning("Restart error " + e.getMessage());
             }
-        });
+        }).start();
     }
 
     @Override
