@@ -32,16 +32,15 @@ import com.zrlog.business.cache.CacheServiceImpl;
 import com.zrlog.business.plugin.StaticSitePlugin;
 import com.zrlog.business.plugin.TemplateDownloadPlugin;
 import com.zrlog.business.util.InstallUtils;
+import com.zrlog.business.util.PluginUtils;
 import com.zrlog.common.*;
 import com.zrlog.common.type.RunMode;
 import com.zrlog.common.vo.DatabaseConnectPoolInfo;
 import com.zrlog.model.WebSite;
 import com.zrlog.plugin.IPlugin;
 import com.zrlog.plugin.Plugins;
-import com.zrlog.util.BlogBuildInfoUtil;
-import com.zrlog.util.DbConnectUtils;
-import com.zrlog.util.I18nUtil;
-import com.zrlog.util.ZrLogUtil;
+import com.zrlog.util.*;
+import com.zrlog.web.Application;
 import com.zrlog.web.inteceptor.GlobalBaseInterceptor;
 import com.zrlog.web.inteceptor.MyI18nInterceptor;
 import com.zrlog.web.inteceptor.PluginInterceptor;
@@ -50,6 +49,7 @@ import com.zrlog.web.inteceptor.StaticResourceInterceptor;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.sql.Connection;
+import java.sql.SQLRecoverableException;
 import java.sql.Statement;
 import java.util.*;
 import java.util.concurrent.Executors;
@@ -74,8 +74,10 @@ public class ZrLogConfigImpl extends ZrLogConfig {
     private final Map<String, Object> website = new TreeMap<>();
     private final long uptime;
     private HikariDataSource dataSource;
+    private final String contextPath;
 
-    public ZrLogConfigImpl(Integer port, Updater updater) {
+    public ZrLogConfigImpl(Integer port, Updater updater, String contextPath) {
+        this.contextPath = contextPath;
         this.port = port;
         this.plugins = new Plugins();
         this.updater = updater;
@@ -83,6 +85,12 @@ public class ZrLogConfigImpl extends ZrLogConfig {
         this.pluginCoreProcess = new PluginCoreProcessImpl(port);
         this.serverConfig = initServerConfig();
         this.uptime = System.currentTimeMillis();
+        this.configRouter();
+        try {
+            this.configDatabaseWithRetry(20);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public static boolean isTest() {
@@ -131,6 +139,11 @@ public class ZrLogConfigImpl extends ZrLogConfig {
         return serverConfig;
     }
 
+    private void configRouter() {
+        AdminRouters.configAdminRoute(serverConfig.getRouter());
+        BlogRouters.configBlogRouter(serverConfig.getRouter());
+    }
+
     private ServerConfig initServerConfig() {
         ServerConfig serverConfig = new ServerConfig().setApplicationName("zrlog")
                 .setApplicationVersion(BlogBuildInfoUtil.getVersionInfo())
@@ -145,25 +158,16 @@ public class ZrLogConfigImpl extends ZrLogConfig {
         serverConfig.addErrorHandle(403, new ZrLogErrorHandle(403));
         serverConfig.addErrorHandle(404, new ZrLogErrorHandle(404));
         serverConfig.addErrorHandle(500, new ZrLogErrorHandle(500));
-        serverConfig.setRequestExecutor(Executors.newVirtualThreadPerTaskExecutor());
-        serverConfig.setDecodeExecutor(Executors.newVirtualThreadPerTaskExecutor());
-        serverConfig.setRequestCheckerExecutor(new ScheduledThreadPoolExecutor(1, r -> {
-            return Thread.ofVirtual().unstarted(r);
-        }));
+        serverConfig.setRequestExecutor(Executors.newFixedThreadPool(200));
+        serverConfig.setDecodeExecutor(Executors.newFixedThreadPool(20));
+        serverConfig.setRequestCheckerExecutor(new ScheduledThreadPoolExecutor(1, ThreadUtils::unstarted));
         serverConfig.addRequestListener(new HttpRequestListener() {
             @Override
-            public void destroy(HttpRequest request, HttpResponse httpResponse) {
+            public void onHandled(HttpRequest request, HttpResponse httpResponse) {
                 I18nUtil.removeI18n();
-            }
-
-            @Override
-            public void create(HttpRequest request, HttpResponse httpResponse) {
-
             }
         });
         StaticResourceInterceptor.staticResourcePath.forEach(e -> serverConfig.addStaticResourceMapper(e, e, ZrLogConfigImpl.class::getResourceAsStream));
-        AdminRouters.configAdminRoute(serverConfig.getRouter());
-        BlogRouters.configBlogRouter(serverConfig.getRouter());
         configInterceptor(serverConfig.getInterceptors());
         Runtime rt = Runtime.getRuntime();
         rt.addShutdownHook(new Thread(this::onStop));
@@ -175,6 +179,7 @@ public class ZrLogConfigImpl extends ZrLogConfig {
         RequestConfig requestConfig = new RequestConfig();
         //最大的提交的body的大小
         requestConfig.setDisableSession(true);
+        requestConfig.setRouter(serverConfig.getRouter());
         requestConfig.setMaxRequestBodySize(1024 * 1024 * 1024);
         return requestConfig;
     }
@@ -184,7 +189,7 @@ public class ZrLogConfigImpl extends ZrLogConfig {
         ResponseConfig config = new ResponseConfig();
         config.setCharSet("utf-8");
         config.setEnableGzip(true);
-        config.setGzipMimeTypes(List.of("text/", "application/javascript", "application/json"));
+        config.setGzipMimeTypes(Arrays.asList("text/", "application/javascript", "application/json"));
         return config;
     }
 
@@ -349,7 +354,7 @@ public class ZrLogConfigImpl extends ZrLogConfig {
         if (!InstallUtils.isInstalled()) {
             return;
         }
-        Thread.ofVirtual().start(() -> {
+        ThreadUtils.start(() -> {
             this.plugins.forEach(IPlugin::stop);
             this.plugins.clear();
             this.plugins.addAll(getPluginList());
@@ -370,6 +375,23 @@ public class ZrLogConfigImpl extends ZrLogConfig {
         });
     }
 
+    private void configDatabaseWithRetry(int timeoutInSeconds) throws InterruptedException {
+        try {
+            configDatabase();
+        } catch (Exception e) {
+            if (timeoutInSeconds > 0 && e instanceof SQLRecoverableException) {
+                int seekSeconds = 5;
+                Thread.sleep(seekSeconds * 1000);
+                configDatabaseWithRetry(timeoutInSeconds - seekSeconds);
+                return;
+            }
+            LoggerUtil.getLogger(Application.class).warning("Config database error " + e.getMessage());
+            if (!Constants.zrLogConfig.getServerConfig().isNativeImageAgent()) {
+                System.exit(-1);
+            }
+        }
+    }
+
     @Override
     public Map<String, Object> getPublicWebSite() {
         return website;
@@ -381,10 +403,23 @@ public class ZrLogConfigImpl extends ZrLogConfig {
     }
 
     @Override
+    public String getContextPath() {
+        return contextPath;
+    }
+
+    @Override
     public DatabaseConnectPoolInfo getDatabaseConnectPoolInfo() {
         if (Objects.isNull(dataSource)) {
             return new DatabaseConnectPoolInfo(0, 0);
         }
         return new DatabaseConnectPoolInfo(dataSource.getHikariPoolMXBean().getActiveConnections(), dataSource.getHikariPoolMXBean().getTotalConnections());
+    }
+
+    @Override
+    public void stop() {
+        PluginUtils.stopAllPlugin();
+        if (Objects.nonNull(dataSource)) {
+            dataSource.close();
+        }
     }
 }
